app layout on desktop corrected (left-aligned and header bleeding)

--- a/join/src/app/app.scss
+++ b/join/src/app/app.scss
@@ -1,26 +1,17 @@
 @use '../../src/styles/index.scss' as styles;
 
-.viewport-centered {
-  min-height: 100dvh;
+.app-layout {
+  background-color: #f6f7f8;
 
   @include styles.up-xxl {
-    @include styles.setFlex($jc: flex-start, $ai: flex-start);
-  }
+    @include styles.setGrid($rows: styles.$header-height minmax(0, 1fr), $columns: 232px minmax(0, 1208px) auto);
+    width: 100%;
+    height: 100dvh;
+    max-height: 1024px;
 
-  .app-layout {
-    background-color: #f6f7f8;
-
-    @include styles.up-xxl {
-      @include styles.setGrid($rows: auto minmax(0, 1fr), $columns: 232px 1fr);
-      width: 100%;
-      max-width: 1440px;
-      height: 100dvh;
-      max-height: 1024px;
-
-      > * {
-        min-width: 0;
-        min-height: 0;
-      }
+    > * {
+      min-width: 0;
+      min-height: 0;
     }
   }
 }
@@ -31,10 +22,15 @@
   }
   
   app-header {
-    grid-area: 1/2/2/3;
+    grid-area: 1/2/2/4;
   }
   
   .content-area {
     grid-area: 2/2/3/3;
+  }
+
+  .empty-content{
+    grid-area: 2/3/3/4;
+    background-color: white;
   }
 }
